# rc

./: .bashrc  .gitconfig  .prettierignore  0-remap_init.ahk  1-modes.ahk  1-unicode.ahk  Jos.ahk  JosRehab.ahk  Necro.ahk  bqn.js  configs-treestyletab@piro.sakura.ne.jp.json  jose.ahk  main.ahk  prov.ahk  unicode.ahk  vimExecJs.js  vim_init.lua  vim_init.vim  vscode_settings.json  youtube-enhancer.json
ahk/: main.ahk  mouse.ahk  unicode.ahk
bqnjs/: .eslintrc  package.json  tsconfig.json
bqnjs/src/: blocks.ts  bodies.ts  bqnVM.ts  bytecode.ts  objects.ts
lua/: plugins.lua
nvim_oxi/: Cargo.toml
nvim_oxi/Project1/: Cargo.toml  Project1.sln  Project1.vcxproj
nvim_oxi/Project1/.cargo/: config.toml
nvim_oxi/Project1/src/: lib.rs
nvim_oxi/Project1/x64/Debug/: Project1.exe.recipe
nvim_oxi/Project1/x64/Debug/Project1.tlog/: Project1.lastbuildstate
